Aktualizacja danych kontaktowych

--- a/index.html
+++ b/index.html
@@ -123,8 +123,10 @@
 		<l>ul. Nowolipki 14/130</l>
 		<l>01-019 Warszawa</l>
 		<l>kontakt@db.org.pl</l>
-		<l>tel. do pełnomocnika wyborczego 888 770 300</l>
 		<l>EwP 322 | NIP 5213636084 | REGON 146281388</l>
+		<l></l>
+		<l>Pełnomocnik Wyborczy: Zbigniew Kawalec</l>
+		<l>tel. 888 770 300 | e-mail zbigniew.kawalec@db.org.pl</l>
 	</p>
 	<l style="font-size: 2rem; color: #aaa; position: absolute; bottom: 0; margin: 0 auto; left: 0; right: 0;">Strona wykorzystuje ciasteczka do prowadzenia statystyk odwiedzin. Możesz zablokować ciasteczka w ustawieniach przeglądarki.</l>
 </section>
@@ -139,7 +141,7 @@
 	<a href="/?q=dokumenty">Dokumenty</a>
 	<a href="/okregi/">Struktury</a>
 	<a href="/?q=Zarząd">Zarząd</a>
-	<a href="/?q=contact">Kontakt</a>
+	<a href="#koniec">Kontakt</a>
 	<a href="http://pe2014.pkw.gov.pl/pl/komitety/view/40">Wybory do PE</a>
 	<a href="#co-mozesz">Zacznij działać!</a>
 </nav>
