--- a/okregi/index.html
+++ b/okregi/index.html
@@ -80,6 +80,7 @@
 								Zespół Okręgowy Kujawsko-Pomorski (zespół nr 2)<br/>
 								Dominik Hernik<br/><br/>
 								<a href="mailto:dominik.hernik@db.org.pl">dominik.hernik@db.org.pl</a><br/>
+								798-852-075
 							</li>
 							<li id="lubelskie">
 								Zespół Okręgowy Lubelski (zespół nr 8)<br/>
@@ -172,9 +173,8 @@
 					</div>
 
 <p style="margin-top: 2em;">Kontakt dla mediów:<br>
-tel. 512454075<br>
-tel. 798852075<br>
-tel. 508204435<br>
+tel. 512454075<br> <!-- PT -->
+tel. 798852075<br> <!-- DH -->
 e-mail: wirtualny.rzecznik@db.org.pl</p>
 				</div>
 			
