--- a/index.html
+++ b/index.html
@@ -6,13 +6,15 @@
 	</title>
 	<link href="//netdna.bootstrapcdn.com/font-awesome/4.0.3/css/font-awesome.css" rel="stylesheet" />
 	<link rel="stylesheet" href="//fonts.googleapis.com/css?family=Lato" />
-	<link rel="stylesheet" href="/index.style.css?v3"/>
+	<link rel="stylesheet" href="/index.style.css?v4"/>
 	<link rel="stylesheet" href="/nav.css?v1"/>
 	<link rel="stylesheet" href="/onepage-scroll.css?v1" media="screen and (min-width: 400px)"/>
 	<script src="//code.jquery.com/jquery-2.0.3.min.js"></script>
 	<script src="/jquery.hashnavig.js?v1"></script>
 	<script src="/jquery.onepage-scroll.js?v1"></script>
 	<script src="/index.script.js?v1"></script>
+	<script src="/index.spot.js?v1"></script>
+	<script src="//www.youtube.com/iframe_api"></script>
 	<meta property="og:title" content="Demokracja Bezpośrednia"/>
 	<meta property="og:description" content="Wiemy, że nie wierzysz już w hasła wyborcze i polityczne obietnice. Dlatego nie zamierzamy Ci ich składać."/>
 	<meta property="og:image" content="http://db.org.pl/OddajeCiGlos.png"/>
@@ -31,37 +33,23 @@
 		</p>
 	</div>
 </section>
-<section class="bialy" id="nie-wierzysz">
+<section class="czarny" id="spot">
+	<iframe id="player" style="width: 100%; height: 100%;" src="//www.youtube.com/embed/yXKHP4htFdg?enablejsapi=1&rel=0" frameborder="0" allowfullscreen>
 	<div>
-		<p>
-			<l>Nie wierzysz już w hasła wyborcze i polityczne obietnice.</l>
-			<l class="font6">Dlatego nie zamierzamy Ci ich składać.</l>
+		<p style="margin-left: 20rem; margin-right: 20rem;">
+			Nie wierzysz już w hasła wyborcze i polityczne obietnice. Dlatego nie zamierzamy Ci ich składać.
+			Chcemy Ci pokazać, że da się wyjść poza skorumpowaną politykę i zakłamane media. Wystarczy uwierzyć, że możesz to zmienić.</l>
+			<l class="font7"><a class="turkus na-czarny" href="#co-mozesz">Zacznij działać.</a></l>
 		</p>
 		<p>
-			<l>Chcemy Ci pokazać, że da się wyjść</l>
-			<l class="font6">poza skorumpowaną politykę i zakłamane media.</l>
-		</p>
-		<p>
-			<l>Wystarczy uwierzyć, że możesz to zmienić.</l>
-			<l class="font8"><a class="turkus na-czarny" href="#co-mozesz">Zacznij działać.</a></l>
-		</p>
-	</div>
-</section>
-<section class="turkus" id="polityka-jest-prosta">
-	<div>
-		<p>
-			<l class="font8">Polityka jest prosta,</l>
+			<l class="font7">Polityka jest prosta,</l>
 			<l>wbrew temu, co twierdzą politycy.</l>
 		</p>
-		<p>
-			<l class="font7">Możesz mieć realny wpływ</l>
-			<l>na to, co dzieje się „na górze”.</l>
-		</p>
-		<p>
-			<l>Poznaj podstawowe mechanizmy polityczne i zacznij działać,</l>
-			<l class="font7">bo nikt nie zrobi tego lepiej niż Ty.</l>
+		<p style="margin-left: 20rem; margin-right: 20rem;">
+			Możesz mieć realny wpływ na to, co dzieje się „na górze”. Poznaj podstawowe mechanizmy polityczne i zacznij działać, bo nikt nie zrobi tego lepiej niż Ty.
 		</p>
 	</div>
+</iframe>
 </section>
 <section class="bialy" id="to-nie-partia">
 	<div>
