--- a/index.html
+++ b/index.html
@@ -25,12 +25,11 @@
 <body>
 <div id="fb-root"></div>
 <div id="main">
-<section class="turkus" id="witaj">
+<section class="bialy" id="witaj">
 	<div>
-		<p style="margin-bottom: 4rem;">
-			<l class="font8">Demokracja Bezpośrednia</l>
-			<l class="font10">oddaje Ci głos.</l>
-		</p>
+		<h1>
+			<img src="/logo.svg" style="height: 60rem;" alt="Demokracja Bezpośrednia oddaje Ci głos.">
+		</h1>
 	</div>
 </section>
 <section class="czarny" id="spot">
