Poprawienie mapy okręgów.

--- a/okregi/index.html
+++ b/okregi/index.html
@@ -5,13 +5,15 @@
 		Koordynatorzy okręgów - Demokracja Bezpośednia
 	</title>
         <link href="//netdna.bootstrapcdn.com/font-awesome/4.0.3/css/font-awesome.css" rel="stylesheet" />
-	<link rel="stylesheet" href="http://iam4u-server.home.pl/db/files/css.css">
+	<link rel="stylesheet" href="//fonts.googleapis.com/css?family=Lato" />
+	<link rel="stylesheet" href="css.css">
 	<link rel="stylesheet" type="text/css" media="screen,projection" href="cssmap-poland.css" />
-	<link rel="stylesheet" href="http://iam4u-server.home.pl/db/files/responsive.css">
+	<link rel="stylesheet" type="text/css" media="screen,projection" href="/nav.css" />
+	<link rel="stylesheet" href="responsive.css">
 	<link href='http://fonts.googleapis.com/css?family=Open+Sans:300,700&subset=latin,latin-ext' rel='stylesheet' type='text/css'>
 	<script  type="text/javascript" src="http://ajax.googleapis.com/ajax/libs/jquery/1/jquery.min.js"></script>
-	<script src="http://iam4u-server.home.pl/db/files/background.position.js"></script>
-	<script src="http://iam4u-server.home.pl/db/jquery.cssmap.js"></script>
+	<script src="background.position.js"></script>
+	<script src="jquery.cssmap.js"></script>
 	
 	<meta property="og:title" content="Kontakt do koordynatorów">
 	<meta property="og:description" content="Lista koordynatorów okręgowych demokracji bezpośredniej w Polsce">
@@ -24,12 +26,6 @@
 
 	<div id="fb-root"></div>
 	
-	<div id="menu_home" style="top: 35px;">
-		<a href="/" style="display: block; width: 100%; height: 100%; text-indent: -1000px; overflow: hidden;">
-			WRÓĆ
-		</a>
-	</div>
-
 	<div style="width: 90%; margin: 0 auto; color: #fff; padding: 26px 0;">
 		
 				<div class="right_panel_outpage" style="display: block; float: left; width: 58%; text-align: left; font-family: 'Open sans', sans-serif;">
@@ -71,73 +67,61 @@
 						</div>
 						<ul style="list-style: none;">
 							<li id="dolnoslaskie">
-								Zespół Okręgowy Dolnośląsko-Opolski (zespół nr 12)<br/>
 								Łukasz Buhl<br/><br/>
 								<a href="mailto:lukasz.buhl@db.org.pl">lukasz.buhl@db.org.pl</a><br/>
 								662-309-991
 							</li>
 							<li id="kujawsko-pomorskie">
-								Zespół Okręgowy Kujawsko-Pomorski (zespół nr 2)<br/>
-								Dominik Hernik<br/><br/>
-								<a href="mailto:dominik.hernik@db.org.pl">dominik.hernik@db.org.pl</a><br/>
-								798-852-075
+								Janusz Lewandowski<br/><br/>
+								<a href="mailto:janusz.lewandowski@db.org.pl">janusz.lewandowski@db.org.pl</a><br/>
+								664-033-810
 							</li>
 							<li id="lubelskie">
-								Zespół Okręgowy Lubelski (zespół nr 8)<br/>
 								Krzysztof Szewczyk<br/><br/>
 								<a href="mailto:krzysztof.szewczyk@db.org.pl">krzysztof.szewczyk@db.org.pl</a><br/>
 								508-390-302
 							</li>
 							<li id="lubuskie">
-								Zespół Okręgowy Lubusko-Zachodniopomorski (zespół nr 13)<br/>
 								Szczepan Jonko<br/><br/>
 								<a href="mailto:szczepan.jonko@db.org.pl">szczepan.jonko@db.org.pl</a><br/>
 								697-044-446
 							</li>
 							<li id="lodzkie">
-								Zespół Okręgowy Łódzki (zespół nr 6)<br/>
 								Paweł Tanajno<br/><br/>
 								<a href="mailto:pawel.tanajno@db.org.pl">pawel.tanajno@db.org.pl</a><br/>
 								600-025-820
 							</li>
 							<li id="malopolskie">
-								Zespół Okręgowy Małopolsko-Świętokrzyski (zespół nr 10)<br/>
 								Adam Kotucha<br/><br/>
 								<a href="mailto:adam.kotucha@db.org.pl">adam.kotucha@db.org.pl</a><br/>
 								515-908-057
 							</li>
 							<li id="mazowieckie">
-								Zespół Okręgowy Warszawski (zespół nr 4)<br/>
-								Zespół Okręgowy Mazowiecki (zespół nr 5)<br/>
-								Paweł Tanajno<br/><br/>
-								<a href="mailto:pawel.tanajno@db.org.pl">pawel.tanajno@db.org.pl</a><br/>
-								512-454-075
+								Dominik Hernik<br/><br/>
+								<a href="mailto:dominik.hernik@db.org.pl">dominik.hernik@db.org.pl</a><br/>
+								798-852-075
 							</li>
 							<li id="opolskie">
-								Zespół Okręgowy Dolnośląsko-Opolski (zespół nr 12)<br/>
-								Łukasz Buhl<br/><br/>
-								<a href="mailto:lukasz.buhl@db.org.pl">lukasz.buhl@db.org.pl</a><br/>
-								662-309-991
+								Krzysztof Jakuczek<br/><br/>
+								<a href="mailto:krzysztof.jakuczek@db.org.pl">krzysztof.jakuczek@db.org.pl</a><br/>
+								605-215-404
 							</li>
 							<li id="podkarpackie">
-								Zespół Okręgowy Podkarpacki (zespół nr 9)<br/>
-								Krystian Wojtas<br/><br/>
-								<a href="mailto:krystian.wojtas@db.org.pl">krystian.wojtas@db.org.pl</a>
+								Adam Kotucha<br/><br/>
+								<a href="mailto:adam.kotucha@db.org.pl">adam.kotucha@db.org.pl</a><br/>
+								515-908-057
 							</li>
 							<li id="podlaskie">
-								Zespół Okręgowy Warmińsko-Mazursko-Podlaski (zespół nr 3)<br/>
 								Dorota Radziszewska<br/><br/>
 								<a href="mailto:dorota.radziszewska@db.org.pl">dorota.radziszewska@db.org.pl</a><br/>
 								696-433-814
 							</li>
 							<li id="pomorskie">
-								Zespół Okręgowy Pomorski (zespół nr 1)<br/>
 								Barnaba Pawełczak<br/><br/>
 								<a href="mailto:barnaba.pawelczak@db.org.pl">barnaba.pawelczak@db.org.pl</a><br/>
 								661-554-607
 							</li>
 							<li id="slaskie">
-								Zespół Okręgowy Śląski (zespół nr 11)<br/>
 								Krzysztof Naleźniak<br/>
 								<a href="mailto:krzysztof.nalezniak@db.org.pl">krzysztof.nalezniak@db.org.pl</a><br/>
 								503-069-222<br/><br/>
@@ -146,25 +130,21 @@
 								888-770-300
 							</li>
 							<li id="swietokrzyskie">
-								Zespół Okręgowy Małopolsko-Świętokrzyski (zespół nr 10)<br/>
 								Adam Kotucha<br/><br/>
 								<a href="mailto:adam.kotucha@db.org.pl">adam.kotucha@db.org.pl</a><br/>
 								515-908-057
 							</li>
 							<li id="warminsko-mazurskie">
-								Zespół Okręgowy Warmińsko-Mazursko-Podlaski (zespół nr 3)<br/>
 								Dorota Radziszewska<br/><br/>
 								<a href="mailto:dorota.radziszewska@db.org.pl">dorota.radziszewska@db.org.pl</a><br/>
 								696-433-814
 							</li>
 							<li id="wielkopolskie">
-								Zespół Okręgowy Wielkopolski (zespół nr 7)<br/>
-								Piotr Batura<br/><br/>
-								<a href="mailto:piotr.batura@db.org.pl">piotr.batura@db.org.pl</a><br/>
-								604-458-272
+								Paweł Tanajno<br/><br/>
+								<a href="mailto:pawel.tanajno@db.org.pl">pawel.tanajno@db.org.pl</a><br/>
+								600-025-820
 							</li>
 							<li id="zachodniopomorskie">
-								Zespół Okręgowy Lubusko-Zachodniopomorski (zespół nr 13)<br/>
 								Szczepan Jonko<br/><br/>
 								<a href="mailto:szczepan.jonko@db.org.pl">szczepan.jonko@db.org.pl</a><br/>
 								697-044-446
@@ -210,6 +190,29 @@ __gaTracker('send', 'pageview');
    });
    
 	});
+</script>
+
+<nav>
+        <div class="nav-icons">
+                <div id="menu-toggle"><i class="fa fa-bars"></i><i class="fa fa-times"></i></div>
+                <a href="http://db.org.pl/"><i class="fa fa-home"></i></a>
+                <a href="https://www.facebook.com/DemokracjaBezposrednia" target="_blank"><i class="fa fa-facebook"></i></a>
+                <a href="https://www.youtube.com/user/DBPartia" target="_blank"><i class="fa fa-youtube-play"></i></a>
+        </div>
+        <div class="nav-links">
+                <a href="http://db.org.pl/program/">Program</a>
+                <a href="http://db.org.pl/?q=node/69">Pytania</a>
+                <a href="http://db.org.pl/sites/default/files/statut_db_2013-12-14_tekst-jednolity.pdf">Statut</a>
+                <a href="http://db.org.pl/?q=dokumenty">Dokumenty</a>
+                <a href="http://db.org.pl/okregi/">Struktury</a>
+                <a href="http://db.org.pl/?q=Zarz%C4%85d">Zarząd</a>
+                <a href="#koniec">Kontakt</a>
+                <a href="#co-mozesz">Zacznij działać!</a>
+        </div>
+</nav>
+
+<script>
+$("#menu-toggle").click(function(){$("nav").toggleClass("visible");});
 </script>
 
 </body></html>
